[package]
name = "forksystemcall"
version = "0.1.5"
edition = "2018"

[dependencies]
rsa = "0.5.0"
rand = "0.8.5"
base32 = "0.4.0"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.39.2"
hex = "0.4.2"
sha2 = "0.10.7"


#[patch.crates-io]
#zeroize = "=1.4.3" # Specify a compatible version

#[dependencies.zeroize]
#version = ">=1, <1.5" # zeroize 1.4 is MSRV 1.51+
#features = ["alloc", "zeroize_derive"]
